--- a/Software/source/lessonplan.html
+++ b/Software/source/lessonplan.html
@@ -59,8 +59,7 @@
                                <td class="td2">2017-10-16</td>
                            </tr>
                            <tr>
-                               <td class="bg">作者：邵红</td>
-                               <td colspan="2" class="bg">单位：中国地质大学</td>
+                               <td class="bg">作者：樊文有</td>
                            </tr>
                            <tr>
                                <td class="td3 bg">媒体类型:ppt</td>
@@ -85,8 +84,7 @@
                                <td class="td2">2017-10-16</td>
                            </tr>
                            <tr>
-                               <td class="bg">作者：邵红</td>
-                               <td colspan="2" class="bg">单位：中国地质大学</td>
+                               <td class="bg">作者：樊文有</td>
                            </tr>
                            <tr>
                                <td class="td3 bg">媒体类型:ppt</td>
@@ -111,8 +109,7 @@
                                <td class="td2">2017-10-16</td>
                            </tr>
                            <tr>
-                               <td class="bg">作者：邵红</td>
-                               <td colspan="2" class="bg">单位：中国地质大学</td>
+                               <td class="bg">作者：樊文有</td>
                            </tr>
                            <tr>
                                <td class="td3 bg">媒体类型:ppt</td>
@@ -137,8 +134,7 @@
                                <td class="td2">2017-10-16</td>
                            </tr>
                            <tr>
-                               <td class="bg">作者：邵红</td>
-                               <td colspan="2" class="bg">单位：中国地质大学</td>
+                               <td class="bg">作者：樊文有</td>
                            </tr>
                            <tr>
                                <td class="td3 bg">媒体类型:ppt</td>
@@ -163,8 +159,7 @@
                                <td class="td2">2017-10-16</td>
                            </tr>
                            <tr>
-                               <td class="bg">作者：邵红</td>
-                               <td colspan="2" class="bg">单位：中国地质大学</td>
+                               <td class="bg">作者：樊文有</td>
                            </tr>
                            <tr>
                                <td class="td3 bg">媒体类型:ppt</td>
@@ -189,8 +184,7 @@
                                <td class="td2">2017-10-16</td>
                            </tr>
                            <tr>
-                               <td class="bg">作者：邵红</td>
-                               <td colspan="2" class="bg">单位：中国地质大学</td>
+                               <td class="bg">作者：樊文有</td>
                            </tr>
                            <tr>
                                <td class="td3 bg">媒体类型:ppt</td>
@@ -215,8 +209,7 @@
                                <td class="td2">2017-10-16</td>
                            </tr>
                            <tr>
-                               <td class="bg">作者：邵红</td>
-                               <td colspan="2" class="bg">单位：中国地质大学</td>
+                               <td class="bg">作者：樊文有</td>
                            </tr>
                            <tr>
                                <td class="td3 bg">媒体类型:ppt</td>
@@ -241,8 +234,7 @@
                                <td class="td2">2017-10-16</td>
                            </tr>
                            <tr>
-                               <td class="bg">作者：邵红</td>
-                               <td colspan="2" class="bg">单位：中国地质大学</td>
+                               <td class="bg">作者：樊文有</td>
                            </tr>
                            <tr>
                                <td class="td3 bg">媒体类型:ppt</td>
@@ -267,8 +259,7 @@
                                <td class="td2">2017-10-16</td>
                            </tr>
                            <tr>
-                               <td class="bg">作者：邵红</td>
-                               <td colspan="2" class="bg">单位：中国地质大学</td>
+                               <td class="bg">作者：樊文有</td>
                            </tr>
                            <tr>
                                <td class="td3 bg">媒体类型:ppt</td>
@@ -293,8 +284,7 @@
                                <td class="td2">2017-10-16</td>
                            </tr>
                            <tr>
-                               <td class="bg">作者：邵红</td>
-                               <td colspan="2" class="bg">单位：中国地质大学</td>
+                               <td class="bg">作者：樊文有</td>
                            </tr>
                            <tr>
                                <td class="td3 bg">媒体类型:ppt</td>
@@ -319,8 +309,7 @@
                                <td class="td2">2017-10-16</td>
                            </tr>
                            <tr>
-                               <td class="bg">作者：邵红</td>
-                               <td colspan="2" class="bg">单位：中国地质大学</td>
+                               <td class="bg">作者：樊文有</td>
                            </tr>
                            <tr>
                                <td class="td3 bg">媒体类型:pdf</td>
@@ -345,8 +334,7 @@
                                <td class="td2">2017-10-16</td>
                            </tr>
                            <tr>
-                               <td class="bg">作者：邵红</td>
-                               <td colspan="2" class="bg">单位：中国地质大学</td>
+                               <td class="bg">作者：樊文有</td>
                            </tr>
                            <tr>
                                <td class="td3 bg">媒体类型:doc</td>
@@ -371,8 +359,7 @@
                                <td class="td2">2017-10-16</td>
                            </tr>
                            <tr>
-                               <td class="bg">作者：邵红</td>
-                               <td colspan="2" class="bg">单位：中国地质大学</td>
+                               <td class="bg">作者：樊文有</td>
                            </tr>
                            <tr>
                                <td class="td3 bg">媒体类型:doc</td>
@@ -397,8 +384,7 @@
                                <td class="td2">2017-10-16</td>
                            </tr>
                            <tr>
-                               <td class="bg">作者：邵红</td>
-                               <td colspan="2" class="bg">单位：中国地质大学</td>
+                               <td class="bg">作者：樊文有</td>
                            </tr>
                            <tr>
                                <td class="td3 bg">媒体类型:doc</td>
@@ -423,8 +409,7 @@
                                <td class="td2">2017-10-16</td>
                            </tr>
                            <tr>
-                               <td class="bg">作者：邵红</td>
-                               <td colspan="2" class="bg">单位：中国地质大学</td>
+                               <td class="bg">作者：樊文有</td>
                            </tr>
                            <tr>
                                <td class="td3 bg">媒体类型:xlsx</td>
